crates/crucible-sqlite/src/query/render/sqlite/tests/snapshots/crucible_sqlite__query__render__sqlite__tests__basic__find_by_path.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1199
expression: result.sql
---
SELECT * FROM notes
WHERE path = :path
