crates/crucible-sqlite/src/query/render/sqlite/tests/snapshots/crucible_sqlite__query__render__sqlite__tests__basic__select_all.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1177
expression: result.sql
---
SELECT * FROM notes
